exports[`invalid(1): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(1): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(2): {\"name\": \"foo\", \"private\": false} 1`] = `

[Input]
  1 | {"name": "foo", "private": false}

`;

exports[`invalid(2): {\"name\": \"foo\", \"private\": false} 2`] = `

Message:
> 1 | {"name": "foo", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(3): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/index.js", "files": ["src"]}

`;

exports[`invalid(3): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/index.js", "files": ["src"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(4): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"types": "./types/index.d.ts", "files": ["dist"]}

`;

exports[`invalid(4): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"types": "./types/index.d.ts", "files": ["dist"]}
    |           ^^^^^^^^^^^^^^^^^^^^ Entry point \`./types/index.d.ts\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(5): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"exports": "./src/**/*.js", "files": ["dist"]}

`;

exports[`invalid(5): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"exports": "./src/**/*.js", "files": ["dist"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./src/**/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(6): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}

`;

exports[`invalid(6): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}
    |             ^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./dist/nested/foo.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(7): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 1`] = `

[Input]
  1 | {"exports": "./a", "files": ["a*a"]}

`;

exports[`invalid(7): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 2`] = `

Message:
> 1 | {"exports": "./a", "files": ["a*a"]}
    |             ^^^^^ Entry point \`./a\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(8): {\"exports\": \"./ba\", \"files\": [\"a\"]} 1`] = `

[Input]
  1 | {"exports": "./ba", "files": ["a"]}

`;

exports[`invalid(8): {\"exports\": \"./ba\", \"files\": [\"a\"]} 2`] = `

Message:
> 1 | {"exports": "./ba", "files": ["a"]}
    |             ^^^^^^ Entry point \`./ba\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(9): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 1`] = `

[Input]
  1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}

`;

exports[`invalid(9): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 2`] = `

Message:
> 1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\` is not covered by the \`files\` allowlist.

`;
